--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       </div>
     </div>
   </header>
-
   <section class="home">
     <div class="container">
       <div class="row full-screen">
@@ -43,7 +42,73 @@
       </div>
     </div>
   </section>
-
+  <section class="about-me">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h1>About Me</h1>
+          <p class="small text-uppercase">Informations About Me</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="about-content">
+          <div class="row">
+            <div class="img">
+              <img src="images/about-me.jpeg" alt="informations about me" />
+            </div>
+            <div class="text">
+              <h4>I'm Andrzej Perski</h4>
+              <h6>A LEAD <span>UX & UI</span> designer based in <span>Poland</span></h6>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+              <div class="info">
+                <div class="list">
+                  <label>Birthday:</label>
+                  <p>5th June 1991</p>
+                </div>
+                <div class="list">
+                  <label>Email:</label>
+                  <p>Test@test.pl</p>
+                </div>
+                <div class="list">
+                  <label>Age</label>
+                  <p>27</p>
+                </div>
+                <div class="list">
+                  <label>Phone</label>
+                  <p>444-444-444</p>
+                </div>
+                <div class="list">
+                  <label>Residence</label>
+                  <p>Wrocław</p>
+                </div>
+                <div class="list">
+                  <label>Skype</label>
+                  <p>skype434</p>
+                </div>
+                <div class="list">
+                  <label>Address</label>
+                  <p>wroclovo</p>
+                </div>
+                <div class="list">
+                  <label>OpenForJob</label>
+                  <p>Yes</p>
+                </div>
+              </div>
+              <div class="social-links">
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-instagram"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="script.js"></script>
 </body>
 
