added services section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,74 @@
       </div>
     </div>
   </section>
+  <section class="services">
+    <div class="container">
+      <div class="row">
+        <div class="section-title text-center">
+          <h1>Your Services</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="service-content">
+            <div class="box">
+              <div class="icon">
+                <i class="fa fa-laptop"></i>
+              </div>
+              <h5>Unique Design</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            </div>
+            <div class="box">
+              <div class="icon">
+              <i class="fa fa-columns">
+              </i></div>
+              <h5>Different Layout</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            </div>
+            <div class="box">
+              <div class="icon">
+              <i class="fa fa-code">
+              </i></div>
+              <h5>Making it simple</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            </div>
+            <div class="box">
+              <div class="icon">
+              <i class="fa fa-mobile">
+              </i></div>
+              <h5>Responsivle</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            </div>
+            <div class="box">
+              <div class="icon">
+              <i class="fa fa-search">
+              </i></div>
+              <h5>Testring Forms</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            </div>
+            <div class="box">
+              <div class="icon">
+              <i class="fa fa-cog">
+              </i></div>
+              <h5>Advanced Options</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
