added skills section

--- a/index.html
+++ b/index.html
@@ -118,60 +118,111 @@
       </div>
       <div class="row">
         <div class="service-content">
-            <div class="box">
-              <div class="icon">
-                <i class="fa fa-laptop"></i>
-              </div>
-              <h5>Unique Design</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+          <div class="box">
+            <div class="icon">
+              <i class="fa fa-laptop"></i>
             </div>
-            <div class="box">
-              <div class="icon">
+            <h5>Unique Design</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat.</p>
+          </div>
+          <div class="box">
+            <div class="icon">
               <i class="fa fa-columns">
               </i></div>
-              <h5>Different Layout</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            </div>
-            <div class="box">
-              <div class="icon">
+            <h5>Different Layout</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat.</p>
+          </div>
+          <div class="box">
+            <div class="icon">
               <i class="fa fa-code">
               </i></div>
-              <h5>Making it simple</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            </div>
-            <div class="box">
-              <div class="icon">
+            <h5>Making it simple</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat.</p>
+          </div>
+          <div class="box">
+            <div class="icon">
               <i class="fa fa-mobile">
               </i></div>
-              <h5>Responsivle</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            </div>
-            <div class="box">
-              <div class="icon">
+            <h5>Responsivle</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat.</p>
+          </div>
+          <div class="box">
+            <div class="icon">
               <i class="fa fa-search">
               </i></div>
-              <h5>Testring Forms</h5>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
-            </div>
-            <div class="box">
-              <div class="icon">
+            <h5>Testring Forms</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat.</p>
+          </div>
+          <div class="box">
+            <div class="icon">
               <i class="fa fa-cog">
               </i></div>
-              <h5>Advanced Options</h5>
+            <h5>Advanced Options</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="skills">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="skills-content">
+          <div class="row">
+            <div class="section-title">
+              <h1>Professional skills</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p>
             </div>
+            <div class="skill-box">
+              <h6>HTML</h6>
+              <div class="skill-bar">
+                <div class="skill-bar-in" style="width: 92%">
+                  <span>92%</span>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <h6>WODPRESS</h6>
+              <div class="skill-bar">
+                <div class="skill-bar-in" style="width: 75%">
+                  <span>75%</span>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <h6>MAGENTO</h6>
+              <div class="skill-bar">
+                <div class="skill-bar-in" style="width: 86%">
+                  <span>86%</span>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <h6>UI/UX</h6>
+              <div class="skill-bar">
+                <div class="skill-bar-in" style="width: 88%">
+                  <span>88%</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="img">
+          <img src="images/skill.jpg" alt="skill" />
         </div>
       </div>
     </div>
