--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 
 <head>
   <title>Portfolio Template</title>
@@ -227,6 +227,103 @@
       </div>
     </div>
   </section>
+
+  <section class="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="section-title text-center">
+          <h1>Latest Work</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="filter-buttons">
+          <ul id="filter-btns">
+            <li class="active" data-target="all">ALL</li>
+            <li data-target="branding">Branding</li>
+            <li data-target="photoshop">Photoshop</li>
+            <li data-target="blog">Blog</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="portfolio-gallery">
+          <div class="item" data-id="branding">
+            <div class="inner">
+              <img src="images/portfolio/1.jpg" alt="portfolio page one" />
+              <div class="overlay">
+                <span class="fa fa-plus"></span>
+                <h4>Branding</h4>
+              </div>
+            </div>
+          </div>
+          <div class="item" data-id="photoshop">
+            <div class="inner">
+              <img src="images/portfolio/2.jpg" alt="portfolio page two" />
+              <div class="overlay">
+                <span class="fa fa-plus"></span>
+                <h4>Photoshop</h4>
+              </div>
+            </div>
+          </div>
+          <div class="item" data-id="branding">
+            <div class="inner">
+              <img src="images/portfolio/3.jpg" alt="portfolio page three" />
+              <div class="overlay">
+                <span class="fa fa-plus"></span>
+                <h4>Branding</h4>
+              </div>
+            </div>
+          </div>
+          <div class="item" data-id="blog">
+            <div class="inner">
+              <img src="images/portfolio/4.jpg" alt="portfolio page four" />
+              <div class="overlay">
+                <span class="fa fa-plus"></span>
+                <h4>Blog</h4>
+              </div>
+            </div>
+          </div>
+          <div class="item" data-id="photoshop">
+            <div class="inner">
+              <img src="images/portfolio/5.jpg" alt="portfolio page five" />
+              <div class="overlay">
+                <span class="fa fa-plus"></span>
+                <h4>Photoshop</h4>
+              </div>
+            </div>
+          </div>
+          <div class="item" data-id="branding">
+            <div class="inner">
+              <img src="images/portfolio/6.jpg" alt="portfolio page six" />
+              <div class="overlay">
+                <span class="fa fa-plus"></span>
+                <h4>Branding</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="message-text">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="text">
+          <h2>Jestem zafascynowany tekstem i programowaniem dlatego zapraszam wszystkich do kontaktu.</h2>
+        </div>
+        <div class="button text-right">
+          <a href="">Get in Touch</a>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <div class="lightbox hide">
+    <span class="close-lightbox fa fa-close"></span>
+    <img src="images/portfolio/1.jpg" alt="portfolio" />
+  </div>
 
   <script src="script.js"></script>
 </body>
