added testimonials section

--- a/index.html
+++ b/index.html
@@ -317,7 +317,68 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <section class="testimonials">
+    <div class="container">
+      <div class="row">
+        <div class="section-title text-center">
+          <h1>Testimonials</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="testimonials-content">
+          <div class="testi-slider">
+            <div class="slide">
+              <div class="img">
+                <img src="images/testimonial/1.png" alt="testimonials" />
+              </div>
+              <div class="text">
+                <p>orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua.</p>
+                <h6>Nance</h6>
+                <p>CO-Founder</p>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="img">
+                <img src="images/testimonial/2.png" alt="testimonials" />
+              </div>
+              <div class="text">
+                <p>orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua.</p>
+                <h6>Nance</h6>
+                <p>CO-Founder</p>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="img">
+                <img src="images/testimonial/3.png" alt="testimonials" />
+              </div>
+              <div class="text">
+                <p>orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua.</p>
+                <h6>Nance</h6>
+                <p>CO-Founder</p>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="img">
+                <img src="images/testimonial/4.png" alt="testimonials" />
+              </div>
+              <div class="text">
+                <p>orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua.</p>
+                <h6>Nance</h6>
+                <p>CO-Founder</p>
+              </div>
+            </div>
+          </div>
+          <div class="slider-controls">
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <div class="lightbox hide">
