added blogs section with dummy posts and some descriptions in page

--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html lang="zxx">
 
 <head>
-  <title>Portfolio Template</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Profesjonalne Projektowanie i Tworzenie Stron Internetowych.</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description"
+    content="Chcesz stworzyć profesjonalną stronę internetową? Mamy już na nią pomysł! Pokaż się już dziś z najlepszej strony w internecie.
+   Stworzyliśmy już kilkaset projektów stron internetowych dla klientów z Polski i całego Świata.
+    Nasza oferta to nie tylko strony www ale również sklepy internetowe. Dopasujemy każdy projekt do Twojego biznesu, zarówno dużego, jak i małego" />
+  <meta property="og:locale" content="pl_PL" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Profesjonalne Projektowanie i Tworzenie Stron Internetowych - Siset.pl" />
+  <meta property="og:description"
+    content="Chcesz stworzyć profesjonalną stronę internetową? Mamy już na nią pomysł! Pokaż się już dziś z najlepszej strony w internecie. 
+    Stworzyliśmy już kilkaset projektów stron internetowych dla klientów z Polski i całego Świata. 
+    Nasza oferta to nie tylko strony www ale również sklepy internetowe. Dopasujemy każdy projekt do Twojego biznesu, zarówno dużego, jak i małego" />
+  <meta name="author" content="helloandrzej">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 
 <body>
@@ -11,7 +27,7 @@
     <div class="container">
       <div class="row">
         <div class="brand-name">
-          <a href="" class="logo">Andrzej</a>
+          <a href="" class="logo">Hello <i class="fa fa-heart" aria-hidden="true"></i> Andrzej</a>
         </div>
         <div class="navbar">
           <ul>
@@ -375,6 +391,52 @@
             </div>
           </div>
           <div class="slider-controls">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="blogs">
+    <div class="container">
+      <div class="row">
+        <div class="section-title text-center">
+          <h1>Latest Blogs</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="blogs-content">
+          <div class="box">
+            <div class="img">
+              <img src="images/blog/1.jpg" alt="blog" />
+            </div>
+            <div class="info">
+              <span>2 Mar 2019</span><span>Design</span>
+            </div>
+            <h3>Make Your Marketing Website</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, atque maxime ipsa sequi vero omnis.</p>
+            <a href="">Read More</a>
+          </div>
+          <div class="box">
+            <div class="img">
+              <img src="images/blog/2.jpg" alt="blog" />
+            </div>
+            <div class="info">
+              <span>2 Mar 2019</span><span>Design</span>
+            </div>
+            <h3>Make Your Marketing Website</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, atque maxime ipsa sequi vero omnis.</p>
+            <a href="">Read More</a>
+          </div>
+          <div class="box">
+            <div class="img">
+              <img src="images/blog/3.jpg" alt="blog" />
+            </div>
+            <div class="info">
+              <span>2 Mar 2019</span><span>Design</span>
+            </div>
+            <h3>Make Your Marketing Website</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, atque maxime ipsa sequi vero omnis.</p>
+            <a href="">Read More</a>
           </div>
         </div>
       </div>
