addid contact form with name, email and textarea

--- a/index.html
+++ b/index.html
@@ -442,6 +442,43 @@
       </div>
     </div>
   </section>
+  <section class="contact-us">
+    <div class="container">
+      <div class="row">
+        <div class="section-title text-center">
+          <h1>Get In Touch</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="contact-form">
+          <div class="row">
+            <div class="text">
+              <h2>Get In Touch</h2>
+              <p>I am are here to answer your questions</p>
+            </div>
+          </div>
+          <div class="row space-between">
+            <div class="col-6">
+              <input type="text" class="form-control" name="" placeholder="Name">
+            </div>
+            <div class="col-6">
+              <input type="text" class="form-control" name="" placeholder="Email">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <textarea class="form-control" placeholder="Your Comment"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="button text-right">
+              <a href="">Get In Touch</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <div class="lightbox hide">
     <span class="close-lightbox fa fa-close"></span>
