--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
         </div>
         <div class="navbar">
           <ul>
-            <li><a href="" class="active">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#home" class="active">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
     </div>
   </header>
-  <section class="home">
+  <section class="home" id="home">
     <div class="container">
       <div class="row full-screen">
         <div class="home-content">
@@ -58,7 +58,7 @@
       </div>
     </div>
   </section>
-  <section class="about-me">
+  <section class="about-me" id="about">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -125,7 +125,7 @@
       </div>
     </div>
   </section>
-  <section class="services">
+  <section class="services" id="services">
     <div class="container">
       <div class="row">
         <div class="section-title text-center">
@@ -244,7 +244,7 @@
     </div>
   </section>
 
-  <section class="portfolio">
+  <section class="portfolio" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="section-title text-center">
@@ -396,7 +396,7 @@
       </div>
     </div>
   </section>
-  <section class="blogs">
+  <section class="blogs" id="blog">
     <div class="container">
       <div class="row">
         <div class="section-title text-center">
@@ -442,7 +442,7 @@
       </div>
     </div>
   </section>
-  <section class="contact-us">
+  <section class="contact-us" id="contact">
     <div class="container">
       <div class="row">
         <div class="section-title text-center">
@@ -477,6 +477,26 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="logo">
+          Hello Andrzej
+        </div>
+        <div class="social">
+          <a href=""><i class="fa fa-facebook"></i></a>
+          <a href=""><i class="fa fa-twitter"></i></a>
+          <a href=""><i class="fa fa-instagram"></i></a>
+          <a href=""><i class="fa fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <section class="copyright">
+    <div class="container">
+      <p>&copy; 2020 All rights reserved</p>
     </div>
   </section>
 
