--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <div class="brand-name">
           <a href="" class="logo">Hello <i class="fa fa-heart" aria-hidden="true"></i> Andrzej</a>
         </div>
+        <div class="ham-burger">
+          <i class="fa fa-bars"></i>
+        </div>
         <div class="navbar">
           <ul>
             <li><a href="#home" class="active">Home</a></li>
