--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
               <a href="">Download CV</a>
             </div>
           </div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/JNOxz9paA6E" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -73,7 +75,7 @@
         <div class="about-content">
           <div class="row">
             <div class="img">
-              <img src="images/about-me.jpeg" alt="informations about me" />
+              <img src="images/about-me.jpeg" alt="informations about me" data-tilt data-tilt-perspective="600" />
             </div>
             <div class="text">
               <h4>I'm Andrzej Perski</h4>
@@ -509,6 +511,9 @@
   </div>
 
   <script src="script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+  <script src="tilt.js"></script>
 </body>
 
 </html>
